# Outdegree

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  build.sh  deny.toml  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/hooks/: session-start.sh
.claude/skills/verify/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml  tag-release.yml
crates/core/: Cargo.toml
crates/core/src/: bridge.rs  camera3.rs  derive.rs  export.rs  favicon.rs  flow.rs  graph.rs  inspect.rs  interpret.rs  layout.rs  lib.rs  model.rs  project.rs  rollup.rs  sample.rs  search.rs  stewardship.rs  store.rs  svg.rs  ui_prefs.rs  views.rs
crates/core/src/render/: canvas2d.rs  mod.rs  wgpu.rs
crates/core/src/ui/: app.rs  chrome.rs  filters.rs  focus_trap.rs  graph_view.rs  help.rs  inspector.rs  mod.rs  modal.rs  onboarding.rs  sankey.rs  saved_views.rs  session_picker.rs  settings.rs  shortcuts.rs  tables.rs
crates/core/tests/: browser.rs  coverage.rs  derive_rollup.rs  prop.rs  sample_data.rs
docs/: M0-CHECKLIST.md  PORTING.md  SCREENSHOTS.md  STORE-LISTING.md  _config.yml  index.md  privacy-policy.md
docs/adr/: 0001-record-architecture-decisions.md  0002-wasm-on-dashboard-not-service-worker.md  0003-append-only-event-store.md  0004-inline-wasm-bytes.md  0005-embed-public-suffix-list.md  0006-favicon-permission.md
extension/: dashboard.css  dashboard.html  manifest.config.ts
extension/icons/: generate-icons.mjs
extension/src/: capture.ts  chrome-bridge.ts  dashboard.ts  idb.ts  sample-data.json  service-worker.ts  types.d.ts
extension/src/__tests__/: capture.test.ts  idb.test.ts
scripts/: build-firefox.mjs  generate-sample-data.mjs  smoke-extension.mjs
