[package]
name = "browsing-graph-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure read-time derivation core for the Browsing Graph extension (Rust -> WASM)."
repository = "https://github.com/erovelli/outdegree"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# --- Pure core dependencies (compile on every target, run under `cargo test`) ---
[dependencies]
url = "2.5"
psl = "2.1"
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- WASM-only shell (store / render / ui / bridge). Never pulled in for `cargo test`. ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
rexie = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlSelectElement",
    "HtmlInputElement",
    "HtmlOptionElement",
    "CanvasRenderingContext2d",
    "Node",
    "Event",
    "MouseEvent",
    "WheelEvent",
    "EventTarget",
    "DomRect",
    "TextMetrics",
    "console",
] }

# Optional GPU escape hatch (decision: only if a real profile needs it).
[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "0.20"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.bytemuck]
version = "1"
optional = true

[features]
webgpu = ["dep:wgpu", "dep:bytemuck"]

[lints.clippy]
# The derive pass intentionally carries many fields; allow a few ergonomic patterns.
too_many_arguments = "allow"
