# The crate is named `browsing-graph-core` for historical reasons; the product and
# npm package are `outdegree`. The crate name is load-bearing in build/CI scripts,
# so it is kept as-is.
[package]
name = "browsing-graph-core"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Pure read-time derivation core for the Outdegree extension (Rust -> WASM)."
repository = "https://github.com/erovelli/Outdegree"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-opt needs the binaryen toolchain (downloaded on demand). Disabled so the
# build works in restricted/offline environments; enable (e.g. wasm-opt = ['-Os'])
# in a build environment that has binaryen for a smaller production bundle.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# --- Pure core dependencies (compile on every target, run under `cargo test`) ---
[dependencies]
url = "2.5"
psl = "2.1"
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- WASM-only shell (store / render / ui / bridge). Never pulled in for `cargo test`. ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
rexie = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlSelectElement",
    "HtmlInputElement",
    "HtmlOptionElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "Node",
    "NodeList",
    "Navigator",
    "StorageManager",
    "StorageEstimate",
    "Blob",
    "File",
    "FileList",
    "Event",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "MediaQueryList",
    "EventTarget",
    "DomRect",
    "TextMetrics",
    "console",
] }

# A GPU (wgpu) renderer was scoped as an escape hatch but is unneeded for v1
# (host count, not event volume, bounds the rendered node set), so the dependency
# and feature were removed rather than shipped uncompiled. canvas2d is the
# renderer; reintroduce a `webgpu` feature behind a measured need. See
# docs/adr/ for the rendering decision.

[lints.clippy]
# The derive pass intentionally carries many fields; allow a few ergonomic patterns.
too_many_arguments = "allow"

# Native-only test deps (proptest does not target wasm32).
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1"

# Browser test deps (wasm-bindgen-test runs the store/bridge suite in headless Chrome).
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
